fixade koden för overflow för att den behövde togglas annars fortsätter den, jag skapade en extra class och togglade den i main.js

--- a/style.scss
+++ b/style.scss
@@ -183,6 +183,10 @@ header{
   display: none;
 }
 
+.scroll{
+  overflow-y: hidden;
+}
+
 @font-face {
   font-family: 'kyivType sans';
   src: url(fonts/KyivTypeSans-Bold.otf);
